--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -36,7 +36,7 @@
         </button>
         <div class="collapse navbar-collapse text-center" id="navbarToggle">
           <div class="navbar-nav mr-auto">
-            <a class="nav-item nav-link" href="{% url 'books_home' %}">OnBook</a>
+            <a class="nav-item nav-link" href="{% url 'books_home' %}">Home</a>
           </div>
           <!-- Navbar Right Side -->
           <div class="navbar-nav ms-auto">
