--- a/messaging/templates/messaging/inbox.html
+++ b/messaging/templates/messaging/inbox.html
@@ -5,7 +5,7 @@
 {% block content %}
 <!-- Main container for inbox layout -->
 <div class="container py-5 bg-body-secondary border border-2 rounded-2">
-	<h2 class="mb-4 text-center">Inbox</h2>
+	<h2 class="mb-4 text-center">{{ user.username }}'s Inbox</h2>
 
 	<!-- Section for starting a new conversation -->
 	<div class="bg-light p-3 p-md-4 rounded-3 shadow-sm">
