--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -18,6 +18,7 @@
           </div>
           <div class="mt-2">
             <a class="btn btn-success" href="{% url 'post-create' %}">New Post</a>
+            <a href="{% url 'download_user_data' %}" class="btn btn-primary">Download My Data</a>
             {% if unread_messages_count > 0 %}
             <a href="{% url 'inbox' %}" class="text-danger ms-2">
               <i class="bi bi-envelope-arrow-up-fill"></i>
