--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -37,6 +37,7 @@
         <div class="collapse navbar-collapse text-center" id="navbarToggle">
           <div class="navbar-nav mr-auto">
             <a class="nav-item nav-link active  " aria-current="page" href="{% url 'books_home' %}">Home</a>
+            <a class="nav-item nav-link " href="{% url 'book_list' %}"> Books</a>
             <a class="nav-item nav-link " href="{% url 'books_about' %}">About</a>
             <a class="nav-item nav-link " href="{% url 'blog-home' %}">Blog</a>
           </div>
