--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -102,7 +102,7 @@
         <div class="col-md-4">
           <h4>Contact</h4>
           <ul class="list-unstyled ">
-            <li>Email: OnBook@example.com</li>
+            <li>Email: <a class="text-decoration-none text-black" href="mailto:pedr.olivares80@gmail.com">OnBook@example.com</a> </li>
             <li>Teléfono: +5 254 567 867</li>
           </ul>
         </div>
